[metadata]
name = aws-boto3-sdk-helpers
version = 1.0.1
description = Contains helper functions for the AWS Python sdk (Boto3) package.
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
long_description_content_type = text/markdown
author = Yiskaneto
license = MIT
license_files =
    LICENSE
project_urls =
    homepage = https://github.com/openwurl/boto3-helpers
classifiers =
    Framework :: Boto3
    Programming Language :: Python :: 3
keywords = boto3, botocore, aws
[options]
packages = find:
python_requires = >=3.8
install_requires =
    boto3
    botocore
