[metadata]
name = aws_boto3_sdk_helpers
version = 1.0.10
description = "Contains helper functions for the AWS Python sdk (Boto3) package."
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
author = Yiskaneto
license = MIT
license_files =
    LICENSE
project_urls =
    homepage = https://github.com/yiskaneto/aws-boto3-sdk-helpers
classifiers =
    Programming Language :: Python :: 3
keywords = boto3, botocore, aws
[options]
package_dir =
   =src
packages = aws_boto3_sdk_helpers
python_requires = >=3.8
install_requires =
    boto3
    botocore
